--- a/src/app/system/bill-page/bill-card/bill-card.component.html
+++ b/src/app/system/bill-page/bill-card/bill-card.component.html
@@ -1,25 +1,25 @@
-<section class="bill-card">
-    <h3 class="bill-card__title">
+<section class="card">
+    <h3 class="card__title">
         Счёт
     </h3>
-    <table class="bill-card__table">
-        <tr class="bill-card__table-row">
-            <td class="bill-card__table-cell bill-card__table-cell--icon">
+    <table class="card__table">
+        <tr class="card__table-row">
+            <td class="card__table-cell card__table-cell--icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="24" viewBox="0 0 24 24"><path fill="#31a7c1" d="M5 24v-5h-4v-3h4v-2h-4v-3h4v-11h8.464c3.698 0 6.143 0 8.16 2.623.89 1.158 1.376 2.69 1.376 4.257 0 2.176-.931 4.312-2.771 5.592-1.891 1.316-3.759 1.528-7.57 1.528h-3.659v2h7v3h-7v5h-4zm4-13h6.249c5.668 0 6.32-8-.324-8h-5.925v8z"/></svg>
             </td>
-            <td class="bill-card__table-cell bill-card__table-cell--count">{{ rub | number:'1.2' }}</td>
+            <td class="card__table-cell card__table-cell--count">{{ rub | number:'1.2' }}</td>
         </tr>
-        <tr class="bill-card__table-row">
-            <td class="bill-card__table-cell bill-card__table-cell--icon">
+        <tr class="card__table-row">
+            <td class="card__table-cell card__table-cell--icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 24"><path fill="#31a7c1" d="M17.728 20.517c-3.488 0-5.613-2.461-6.443-5.517h6.715l.333-2h-7.398c-.059-.664-.064-1.335-.014-2h7.746l.333-2h-7.755c.786-3.106 2.855-5.626 6.154-5.626 1.133 0 2.391.203 3.836.62l.765-3.162c-1.854-.552-3.616-.832-5.244-.832-5.959 0-9.541 4.152-10.594 9h-2.162l-.333 2h2.203c-.049.666-.051 1.334-.007 2h-2.53l-.333 2h3.145c1.033 4.848 4.664 9 11.085 9 1.5 0 3.004-.276 4.476-.821l-.883-3.23c-1.048.378-2.088.568-3.095.568z"/></svg>
             </td>
-            <td class="bill-card__table-cell bill-card__table-cell--count">{{ bill.value }}</td>
+            <td class="card__table-cell card__table-cell--count">{{ bill.value }}</td>
         </tr>
-        <tr class="bill-card__table-row">
-            <td class="bill-card__table-cell bill-card__table-cell--icon">
+        <tr class="card__table-row">
+            <td class="card__table-cell card__table-cell--icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#31a7c1" d="M19 16.166c0-4.289-4.465-5.483-7.887-7.091-2.079-1.079-1.816-3.658 1.162-3.832 1.652-.1 3.351.39 4.886.929l.724-3.295c-1.814-.551-3.437-.803-4.885-.841v-2.036h-2v2.134c-3.89.535-5.968 2.975-5.968 5.7 0 4.876 5.693 5.62 7.556 6.487 2.54 1.136 2.07 3.5-.229 4.021-1.993.451-4.538-.337-6.45-1.079l-.909 3.288c1.787.923 3.931 1.417 6 1.453v1.996h2v-2.105c3.313-.464 6.005-2.293 6-5.729z"/></svg>
             </td>
-            <td class="bill-card__table-cell bill-card__table-cell--count">{{ dollar | number:'1.2' }}</td>
+            <td class="card__table-cell card__table-cell--count">{{ dollar | number:'1.2' }}</td>
         </tr>
     </table>
 </section>
