ctill changes classes' names

--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -1,16 +1,16 @@
 <section class="card">
     <h3 class="card__title">Добавить категорию</h3>
     <form class="card__form">
-        <fieldset class="card__fieldset">
-            <legend class="card__legend" for="category-name">Введите название</legend>
-            <input type="text" id="category-name" class="card__input">
-            <span class="card__message card__message--error">Валидация ошибка</span>
+        <fieldset class="card__form-fieldset">
+            <legend class="card__form-legend" for="category-name">Введите название</legend>
+            <input type="text" id="category-name" class="card__form-input">
+            <span class="card__form-message card__form-message--error">Валидация ошибка</span>
         </fieldset>
-        <fieldset class="card__fieldset">
-            <legend class="card__legend" for="category-value">Введите лимит</legend>
-            <input type="number" value="0" id="category-value" class="card__input">
-            <span class="card__message card__message--success">Валидация нет ошибки</span>
+        <fieldset class="card__form-fieldset">
+            <legend class="card__form-legend" for="category-value">Введите лимит</legend>
+            <input type="number" value="0" id="category-value" class="card__form-input">
+            <span class="card__form-message card__form-message--success">Валидация нет ошибки</span>
         </fieldset>
-        <button type="submit" class="card__btn card__btn--add">Добавить</button>
+        <button type="submit" class="card__form-btn card__form-btn--add">Добавить</button>
     </form>
 </section>
