--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -30,6 +30,7 @@ $main_color: $color_grey7;
 $card-color: $color_white;
 $card-color-text: $color_grey;
 $table-border-color: $color_grey5;
+$error_color: $color_red;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
