--- a/src/assets/style/common/card.scss
+++ b/src/assets/style/common/card.scss
@@ -1,12 +1,33 @@
+@keyframes errorInput {
+    from,
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        transform: translate3d(-10px, 0, 0);
+    }
+    20%,
+    40%,
+    60%,
+    80% {
+        transform: translate3d(10px, 0, 0);
+    }
+}
+
 .card {
     max-width: 95%;
     min-width: 90%;
     height: 100%;
     padding: 20px;
+    color: $card-color-text;
     background-color: $card-color;
     border-radius: 8px;
     &__title {
-        margin: 0;
+        margin: 0 0 15px 0;
         font-size: 20px;
         font-weight: 500;
         color: $card-color-text;
@@ -23,6 +44,48 @@
         color: $card-color-text;
         &--icon {
             text-align: center;
+        }
+    }
+    &__form-fieldset {
+        padding: 0;
+        margin: 0 0 25px 0;
+        border: 0;
+        &--error {
+            color: $error_color;
+            border: 1px solid $error_color;
+            border-radius: 8px;
+            animation: errorInput 1s linear;
+        }
+    }
+    &__form-legend {
+        margin-bottom: 10px;
+        font-weight: 600;
+    }
+    &__form-select {
+        width: 100%;
+    }
+    &__form-label {
+        display: block;
+    }
+    &__form-message {
+        display: block;
+        font-size: 13px;
+    }
+    &__form-btn {
+        @include btn-reset();
+        display: inline-block;
+        width: 100%;
+        height: 38px;
+        margin: 15px auto;
+        font-weight: 400;
+        text-align: center;
+        line-height: 15px;
+        vertical-align: middle;
+        color: $color-white;
+        background-color: $color-blue;
+        &:disabled {
+            color: $color_grey3;
+            background-color: $color_grey2;
         }
     }
 }
