adds common styles

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -31,6 +31,7 @@ $card-color: $color_white;
 $card-color-text: $color_grey;
 $table-border-color: $color_grey5;
 $error_color: $color_red;
+$success-color: $color_green;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
