adds common styles

--- a/src/assets/style/common/card.scss
+++ b/src/assets/style/common/card.scss
@@ -101,6 +101,6 @@
     }
     &__wrapper {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 }
