--- a/src/app/system/bill-page/currency-card/currency-card.component.html
+++ b/src/app/system/bill-page/currency-card/currency-card.component.html
@@ -9,18 +9,18 @@
         <tbody>
             <tr class="card__table-row">
                 <td class="card__table-cell">доллар</td>
-                <td class="card__table-cell">{{ currency.rates['USD'] }}</td>
-                <td class="card__table-cell">{{ currency.date | date : 'dd.MM.yyyy'}}</td>
+                <td class="card__table-cell">{{ (currency?.rates)['USD'] }}</td>
+                <td class="card__table-cell">{{ currency?.date | date: 'dd.MM.yyyy' }}</td>
             </tr>
             <tr class="card__table-row">
                 <td class="card__table-cell">фунт стерлингов</td>
-                <td class="card__table-cell">{{ currency.rates['GBP'] }}</td>
-                <td class="card__table-cell">{{ currency.date | date : 'dd.MM.yyyy'}}</td>
+                <td class="card__table-cell">{{ (currency?.rates)['GBP'] }}</td>
+                <td class="card__table-cell">{{ currency?.date | date: 'dd.MM.yyyy' }}</td>
             </tr>
             <tr class="card__table-row">
                 <td class="card__table-cell">рубль</td>
-                <td class="card__table-cell">{{ currency.rates['RUB'] }}</td>
-                <td class="card__table-cell">{{ currency.date | date : 'dd.MM.yyyy'}}</td>
+                <td class="card__table-cell">{{ (currency?.rates)['RUB'] }}</td>
+                <td class="card__table-cell">{{ currency?.date | date: 'dd.MM.yyyy' }}</td>
             </tr>
         </tbody>
     </table>
