--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -1,16 +1,20 @@
 <section class="card">
     <h3 class="card__title">Добавить категорию</h3>
     <form class="card__form" #form="ngForm" (ngSubmit)="onSubmit(form)">
-        <fieldset class="card__form-fieldset" [ngClass]="{'card__form-fieldset--error' : name.invalid && name.touched}">
+        <fieldset class="card__form-fieldset" [ngClass]="{ 'card__form-fieldset--error': name.invalid && name.touched }">
             <legend class="card__form-legend" for="category-name">Введите название</legend>
-            <input type="text" id="category-name" class="card__form-input inputs" #name="ngModel" name="name" ngModel required>
-            <span class="card__form-message card__form-message--error" *ngIf="name.invalid && name.touched">Имя категории обязательно</span>
+            <input type="text" id="category-name" class="card__form-input inputs" #name="ngModel" name="name" ngModel required />
+            <span class="card__form-message card__form-message--error" *ngIf="name.invalid && name.touched">
+                Имя категории обязательно
+            </span>
         </fieldset>
-        <fieldset class="card__form-fieldset" [ngClass]="{'card__form-fieldset--error' : capacity.invalid && capacity.touched}">
+        <fieldset class="card__form-fieldset" [ngClass]="{ 'card__form-fieldset--error': capacity.invalid && capacity.touched }">
             <legend class="card__form-legend" for="category-capacity">Введите лимит</legend>
-            <input type="number" min="1" id="category-capacity" class="card__form-input inputs" #capacity="ngModel" [ngModel]="1" name="capacity" required>
-            <span class="card__form-message card__form-message--success" *ngIf="capacity.invalid && capacity.touched">Валидация нет ошибки</span>
+            <input type="number" min="1" id="category-capacity" class="card__form-input inputs" #capacity="ngModel" [ngModel]="1" name="capacity" required />
+            <span class="card__form-message card__form-message--success" *ngIf="capacity.invalid && capacity.touched">
+                Лимит обязателен
+            </span>
         </fieldset>
-        <button type="submit" class="card__form-btn card__form-btn--add">Добавить</button>
+        <button type="submit" class="card__form-btn card__form-btn--add" [disabled]="form.invalid">Добавить</button>
     </form>
 </section>
