--- a/src/app/system/records-page/add-event/add-event.component.scss
+++ b/src/app/system/records-page/add-event/add-event.component.scss
@@ -1,2 +1,3 @@
 @import '../../../../assets/style/helpers';
+@import '../../../../assets/style/common/inputs';
 @import '../../../../assets/style/common/card';
