--- a/src/app/system/records-page/edit-category/edit-category.component.scss
+++ b/src/app/system/records-page/edit-category/edit-category.component.scss
@@ -1,2 +1,3 @@
 @import '../../../../assets/style/helpers';
 @import '../../../../assets/style/common/card';
+@import '../../../../assets/style/common/inputs';
