integrates records page

--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -1,13 +1,13 @@
-<section class="records-page" *ngIf="!isLoad">
+<section class="records-page">
     <div class="records-page__wrapper">
         <h2 class="records-page__title">Страница записей</h2>
     </div>
-    <div class="records-page__wrapper records-page__wrapper--card">
-        <app-add-event class="records-page__add-event"></app-add-event>
-        <app-add-category class="records-page__add-category"></app-add-category>
-        <app-edit-category class="records-page__edit-category"></app-edit-category>
+    <div class="records-page__wrapper records-page__wrapper--card" *ngIf="isLoad">
+        <app-add-event class="records-page__item" [categories]="categories"></app-add-event>
+        <app-add-category class="records-page__item" (categoryAdd)="newCategoryAdded($event)"></app-add-category>
+        <app-edit-category class="records-page__item" [categories]="categories" (categoryEdit)="categoryEditted($event)"></app-edit-category>
     </div>
 </section>
-<section *ngIf="isLoad">
+<section *ngIf="!isLoad">
     тык
 </section>
