--- a/src/app/system/records-page/records-page.component.scss
+++ b/src/app/system/records-page/records-page.component.scss
@@ -29,12 +29,16 @@
             height: 300px;
         }
     }
-    &__category {
+    &__item {
         width: 100%;
         height: 100%;
         @media ($width-tablet) {
-            flex: 1 0 45%;
-            height: 300px;
+            flex: 0 1 50%;
+            min-height: 300px;
+            margin-bottom: 25px;
+        }
+        &--edit {
+            @media ($width-tablet) {}
         }
     }
 }
