adds common styles

--- a/src/assets/style/common/card.scss
+++ b/src/assets/style/common/card.scss
@@ -69,6 +69,7 @@
     }
     &__form-message {
         display: block;
+        padding-left: 10px;
         font-size: 13px;
     }
     &__form-btn {
