--- a/src/app/system/history-page/history-chart/history-chart.component.html
+++ b/src/app/system/history-page/history-chart/history-chart.component.html
@@ -1,3 +1,3 @@
-<section class="card">
-    <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)"></ngx-charts-advanced-pie-chart>
+<section class="card card--wild">
+    <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="data" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"></ngx-charts-pie-chart>
 </section>
