adds common styles

--- a/src/assets/style/common/card.scss
+++ b/src/assets/style/common/card.scss
@@ -46,6 +46,7 @@
     }
     &__table-cell {
         color: $card-color-text;
+        text-align: left;
         &--icon {
             text-align: center;
         }
