--- a/src/app/system/history-page/history-page.component.scss
+++ b/src/app/system/history-page/history-page.component.scss
@@ -20,7 +20,9 @@
         font-weight: 600;
         color: $header_text_color;
     }
-    &__chart {
+    &__chart,
+    &__events {
         width: 100%;
+        margin-bottom: 25px;
     }
 }
