--- a/src/app/system/history-page/history-events/history-events.component.html
+++ b/src/app/system/history-page/history-events/history-events.component.html
@@ -1,70 +1,41 @@
-<section class="section">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-header bordered">
-                    <div class="header-block">
-                        <h3 class="title">Список событий</h3>
-                    </div>
-                    <div class="form-inline pull-right m-r-2">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Поиск..." />
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle ">
-                                Параметр
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-block">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Сумма</th>
-                                <th>Дата</th>
-                                <th>Категория</th>
-                                <th>Тип</th>
-                                <th class="text-lg-center">Действие</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>44 444</td>
-                                <td>12.12.2017</td>
-                                <td>Товары</td>
-                                <td>
-                                    <span class="label label-danger">Расход</span>
-                                </td>
-                                <td class="text-lg-center">
-                                    <a href="#" class="btn btn-primary-outline">Открыть</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>33 333</td>
-                                <td>12.12.2017</td>
-                                <td>Отдых</td>
-                                <td>
-                                    <span class="label label-success">Доход</span>
-                                </td>
-                                <td class="text-lg-center">
-                                    <a href="#" class="btn btn-primary-outline">Открыть</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+<section class="card card--wild">
+    <header class="card__header">
+        <h3 class="card__title">Список событий</h3>
+        <div class="card__wrapper">
+            <input [(ngModel)]="searchValue" class="inputs card__search" type="search" [placeholder]="searchPlaceholder" />
+            <select name="" id="">
+                <option (click)="selectOption('amount')">Сумма</option>
+                <option (click)="selectOption('date')">Дата</option>
+                <option (click)="selectOption('category')">Категория</option>
+                <option (click)="selectOption('type')">Тип</option>
+            </select>
         </div>
-    </div>
+    </header>
+    <table class="card__table">
+        <thead>
+            <tr class="card__table-row">
+                <th class="card__table-cell">#</th>
+                <th class="card__table-cell">Сумма</th>
+                <th class="card__table-cell">Дата</th>
+                <th class="card__table-cell">Категория</th>
+                <th class="card__table-cell">Тип</th>
+                <th class="card__table-cell">Действие</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="card__table-row" *ngFor="let action of actions | filter: searchValue:searchField; let i = index">
+                <th scope="row">{{ i + 1 }}</th>
+                <td class="card__table-cell">{{ action.amount | number: '1.2' }}</td>
+                <td class="card__table-cell">{{ action.date }}</td>
+                <td class="card__table-cell">{{ action.categoryName }}</td>
+                <td class="card__table-cell">
+                    <span *ngIf="action.type === 'outcome'">Расход</span>
+                    <span *ngIf="action.type === 'income'">Доход</span>
+                </td>
+                <td class="card__table-cell">
+                    <a [routerLink]="['/system/history', action.id]" class="card__form-btn">Открыть</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </section>
