adds common styles

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -7,6 +7,7 @@ $width-desktop-external: 'min-width: 1218px';
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 //colors by HEX
+$color_black: #000;
 $color_grey: #4f5f6f;
 $color_grey2: #ccc;
 $color_grey3: #667380;
