--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '../src/assets/style/common/normalize';
+@import '../src/assets/style/common/modal';
 * {
     box-sizing: border-box;
     font-size: 16px;
